app/directives/sidebar/sidebar.scss
.sidebar {
  height: 100%;
  background-color: white;
  display: flex;
  flex-direction: column;


  .user {
    padding: 20px;
    display: flex;

    .picture {
      > img {
        width: 50px;
        height: 50px;
        border-radius: 50%;
      }
    }

    .texts {
      font-family: 'Roboto', sans-serif;
      padding-left: 8px;
      padding-top: 6px;

      .name {
        font-size: 12px;
      }

      .username {
        font-size: 16px;
      }
    }
  }

  .link {
    font-family: 'Roboto';
    color: #797979;
    text-decoration: none;
    position: relative;
    display: block;
    padding-left: 15px;
    font-size: 15px;
    font-weight: 300;
  }

  .section {
    text-transform: uppercase;
    font-size: 14px;
    font-weight: 600;
    color: #5f5f5f;
    letter-spacing: 0.7px;
    margin: 10px;
    margin-bottom: 20px;
    margin-left: 25px;

    .new {
      float: right;
      padding: 5px;
      font-size: 25px;
      margin-top: -10px;
      color: #ff8820;
      font-weight: 600;
      cursor: pointer;
    }
  }

  .search-area {
    display: flex;
    align-items: center;
    padding-left: 20px;

    .search-field {
      width: 100%;
      padding: 5px;
      padding-top: 20px;
      padding-bottom: 15px;
      padding-left: 10px;
      font-weight: 300;
      border: none;

      &:focus {
        outline: none;
      }
    }

    i {
      margin-top: 3px;
      color: #cccccc;
    }
  }

  .browse {
    margin-bottom: 50px;

    .active {
      font-weight: 500;
      color: #FF8820;
      i {
        color: #FF8820;
      }
    }

    > a {
      @extend .link;
      padding: 10px 0 10px 25px;

      i {
        color: #cccccc;
        float: left;
        text-align: center;
        width: 25px;
        margin-top: -1px;
        margin-right: 10px;
        font-size: 20px;
      }
    }
  }

  .playlists {
    overflow-y: scroll;
    a {
      @extend .link;
      padding: 10px 10px 10px 25px;
    }
  }
}

